@@ -1,0 +1,16 @@
+﻿namespace LightBDD.Framework.Parameters;
+
+/// <summary>
+/// Order of inferred columns
+/// </summary>
+public enum InferredColumnsOrder
+{
+    /// <summary>
+    /// Order by name
+    /// </summary>
+    Name,
+    /// <summary>
+    /// Maintain declaration order
+    /// </summary>
+    Declaration
+};
